feat: reviewed colors, netlify configuration, added portugues

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -86,3 +86,28 @@ collections:
               - { label: "Label", name: "label", widget: "string" }
               - { label: "Title", name: "title", widget: "string" }
               - { label: "Content", name: "content", widget: "markdown" }
+      - label: "Portuguese"
+        name: "french"
+        file: "public/locales/pt.json"
+        fields:
+          - label: "Button 1"
+            name: "button1"
+            widget: "object"
+            fields:
+              - { label: "Label", name: "label", widget: "string" }
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Content", name: "content", widget: "markdown" }
+          - label: "Button 2"
+            name: "button2"
+            widget: "object"
+            fields:
+              - { label: "Label", name: "label", widget: "string" }
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Content", name: "content", widget: "markdown" }
+          - label: "Button 3"
+            name: "button3"
+            widget: "object"
+            fields:
+              - { label: "Label", name: "label", widget: "string" }
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Content", name: "content", widget: "markdown" }
