--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -90,6 +90,9 @@ collections:
         name: "french"
         file: "public/locales/pt.json"
         fields:
+            label: "Location"
+            name: "location"
+            widget: "string"
           - label: "Button 1"
             name: "button1"
             widget: "object"
