--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
+    "react-markdown": "^9.0.1",
     "shadcn-ui": "^0.9.3",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
